--- a/first.html
+++ b/first.html
@@ -9,5 +9,6 @@
 </head>
 <body>
     <h1>hello world</h1>
+    <div><img src="image.png" alt="myimage" style="width:100%;max-width:960px"></div>
 </body>
 </html>
