--- a/first.html
+++ b/first.html
@@ -10,5 +10,6 @@
 <body>
     <h1>hello world</h1>
     <div><img src="image.png" alt="myimage" style="width:100%;max-width:960px"></div>
+    <div><img src="MicrosoftTeams-image (1).png" alt="another" style="width:100%;max-width:960px"></div>
 </body>
 </html>
